     New: Using the more native file dialog on Mac OS X.
     New: Replaced Add Annotation menus with a dialog and filterable list to aid keyboard usage.
     New: Added Undo/Redo support.
     New: Added Cut and Paste to the menu. Even if the viewer itself can't use them, they're useful in
          other places.
     New: Added Find support.
     New: Added keyboard accelerators for Add Annotation and Add Sub-Region.
     New: Added Window menu on Mac OS X.
     New: Added Open Recent menu.
     New: Added Revert to Saved.
     New: Added the ability to apply custom styles to annotations.
     New: Building on the better events from hex-components, the tree now updates only the portion which
          changed instead of updating the whole tree and losing the expansion state.
     New: Added document unsaved (asterisk) indicators for non-Aqua look and feels.

   Fixed: NullPointerException for new notebooks due to a lack of annotations.
   Fixed: Various application behaviour issues for Mac OS X.
   Fixed: Unsaved document indicator properly reflects the state.

 Changed: The Encoding option for string annotations is now chosen using a more convenient means of
          selection.
 Changed: Document titles now show the file extension.
 Changed: Actions which require focus now disable when the required focus is not available.
 Changed: Renamed Remove Annotation to Delete and removed Remove Sub-Region since it can be achieved
          via Remove Annotation anyway.
 Changed: Copy now disables when there is nothing to copy.

Version 0.3 (2012-11-10)

     New: Annotations not visible in the tree due to their parents being collapsed are now hidden from rendering
          in the viewer.
     New: Selecting an annotation in the tree will select the corresponding range in the viewer.

 Changed: Code usable by other projects was moved out into hex-components (doesn't affect functionality.)