@@ -223,6 +223,15 @@ FindBar.previous=Previous
 FindBar.next=Next
 CloseFindBar.name=Close Find Bar
 
+# Jump to Offset Bar
+
+JumpToOffsetBar.absolute=Absolute
+JumpToOffsetBar.relativeToCursor=Relative to Cursor
+JumpToOffsetBar.relativeToSubRegion=Relative to Sub-Region
+JumpToOffsetBar.jump=Jump
+JumpToOffsetBar.forwards=Forwards
+JumpToOffsetBar.backwards=Backwards
+
 # Encoding selection dialog.
 
 SelectEncoding.title=Select Encoding
